# GitSense

./: CMakeLists.txt  README.md
include/: git_branch_info.hpp  git_repo_checker.hpp
src/: git_branch_info.cpp  git_repo_checker.cpp  main.cpp
